# smarter-websearch-mcp

./: README.md  main.py  manager.py  mcp_server.py  planner_agent.py  printer.py  pyproject.toml  requirements.txt  search_agent.py  search_critic.py  web_search_tool.py
smarterwebsearchmcp/: __init__.py  manager.py  planner_agent.py  search_agent.py  search_critic.py  web_search_tool.py
